atualizando rotas e senha da database
