# Projeto_Interdisciplinar/dist/swagger.json
@@ -445,6 +445,60 @@
 				"parameters": []
 			}
 		},
+		"/Pet/listarTodosPetsPorCPF": {
+			"get": {
+				"operationId": "ListarPetsPorCpf",
+				"responses": {
+					"200": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					},
+					"204": {
+						"description": "No content"
+					},
+					"400": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BasicResponseDto"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Pet"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "cpfCliente",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/cliente": {
 			"post": {
 				"operationId": "CadastrarCliente",
